<resources>
    <string name="app_name">Game Of Thrones</string>

    <string name="btn_back">Back</string>

    <string name="tv_categories">Categories</string>
    <string name="tv_houses">Houses</string>
    <string name="tv_books">Books</string>
    <string name="tv_characters">Characters</string>
    <string name="tv_name">Name</string>
    <string name="tv_region">Region</string>
    <string name="tv_title">Title</string>
    <string name="tv_isbn">ISBN</string>
    <string name="tv_authors">Authors</string>
    <string name="tv_num_of_pages">Num. Of Pages</string>
    <string name="tv_publisher">Publisher</string>
    <string name="tv_country">Country</string>
    <string name="tv_media_type">Media Type</string>
    <string name="tv_released">Released</string>
    <string name="tv_gender">Gender</string>
    <string name="tv_culture">Culture</string>
    <string name="tv_born">Born</string>
    <string name="tv_died">Died</string>
    <string name="tv_titles">Titles</string>
    <string name="tv_aliases">Aliases</string>
    <string name="tv_father">Father</string>
    <string name="tv_mother">Mother</string>
    <string name="tv_spouse">Spouse</string>
    <string name="tv_allegiances">Allegiances</string>
    <string name="tv_played_by">Played By</string>
</resources>