<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_margin="6dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/secondary_light"
        card_view:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/iv_houses"
                android:layout_width="100dp"
                android:layout_height="100dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/game_of_thrones" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tv_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/iv_houses" />

            <TextView
                android:id="@+id/tv_houses_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="@+id/tv_houses_region"
                card_view:layout_constraintTop_toTopOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_region"
                android:textColor="@color/black"
                android:textSize="16sp"
                card_view:layout_constraintStart_toStartOf="@+id/tv_name"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_houses_region"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/tv_region"
                card_view:layout_constraintTop_toTopOf="@+id/tv_region" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                card_view:layout_constraintStart_toStartOf="@+id/tv_region"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_region" />

            <TextView
                android:id="@+id/tv_houses_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="@+id/tv_houses_region"
                card_view:layout_constraintTop_toTopOf="@+id/tv_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>